--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,7 +19,9 @@
                 PASJ2025 参加・発表申込システム
                 <img src="images/external_link.svg" alt="link icon">
             </a><br>
-            <b>発表申し込み受付中!!</b> (参加申し込みは<b>4月22日(火)</b>から)<br>
+            <b>受付中!!</b> <br>
+            発表申し込み締め切り：<b>5月9日(金)</b><br>
+            事前参加登録締め切り：<b>7月8日(火)</b><br>
             <br>
             <a class="btn btn-success" href="https://form.run/@pasj2025-exhibition-form" role="button">
                 企業展示出展・広告掲載申し込み
