--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,12 +7,8 @@
                 <div class="h-75 overflow-y-auto">
                     {{ with site.Data.news }}
                     {{ range . }}
-                    <p style="margin-bottom: 0;">[{{ .date }}] {{ .message }}</p>
+                    <p style="margin-bottom: 0;">[{{ .date }}] {{ .message | safeHTML }}</p>
                     {{ end }}
-                    {{ end }}
-                    {{ range where .Site.RegularPages.ByDate.Reverse "Params.hidden" "!=" true }}
-                    <p style="margin-bottom: 0;">[{{ .Date.Format "2006/01/02" }}] <a href="{{ .RelPermalink }}">{{
-                            .Title }}</a> {{ .Params.description }}</p>
                     {{ end }}
                 </div>
             </div>
