--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,7 +19,7 @@
             <a class="btn btn-primary" href="https://iap-jp.org/pasj/conf/" role="button">
                 PASJ2025 参加・発表申込システム
                 <img src="images/external_link.svg" alt="link icon">
-            </a><br>
+            </a>
             <b>受付中!!</b> <br>
             発表申し込み締め切り：<b>5月9日(金)</b><br>
             事前参加登録締め切り：<b>7月8日(火)</b><br>
@@ -28,8 +28,23 @@
                 企業展示出展・広告掲載申し込み
                 <img src="images/external_link.svg" alt="link icon">
             </a>
+            <b>受付中!!</b><br>
+            申し込み締め切り : <b>6月6日(金)</b>
             <br>
-            <b>受付中!! 6月6日(金) 締切</b>
+            <br>
+            <a class="btn btn-secondary" href="https://form.run/@conf-bunken-L85xLA1MozrhpOr11coD" role="button">
+                学生・企業/研究機関懇談会申込み（学生のかた）
+                <img src="images/external_link.svg" alt="link icon">
+            </a>
+            <b>受付中!!</b><br>
+            申し込み締め切り : <b>7月31日(金)</b>
+
+            <a class="btn btn-secondary mt-3" href="https://form.run/@conf-bunken-VHQbZjXYJ8vtG6AoGUuO" role="button">
+                学生・企業/研究機関懇談会申込み（企業・研究機関のかた）
+                <img src="images/external_link.svg" alt="link icon">
+            </a>
+            <b>受付中!!</b><br>
+            申し込み締め切り : <b>6月27日(金)</b>
         </div>
 
     </div>
