Update Deadline of abstract submission

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -21,8 +21,7 @@
                 <img src="images/external_link.svg" alt="link icon">
             </a>
             <b>受付中!!</b> <br>
-            口頭発表申し込み締め切り：<b>5月14日(水) 24時</b><br>
-            ポスター発表申し込み締め切り：<b>5月23日(金) 24時</b><br>
+            発表申し込み締め切り：<b>5月14日(水) 24時</b><br>
             事前参加登録締め切り：<b>7月8日(火)</b><br>
             <br>
             <a class="btn btn-success" href="https://form.run/@pasj2025-exhibition-form" role="button">
