--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,9 +19,10 @@
             <a class="btn btn-primary" href="https://iap-jp.org/pasj/conf/" role="button">
                 PASJ2025 参加・発表申込システム
                 <img src="images/external_link.svg" alt="link icon">
-            </a>
-            <b>受付中!!</b> <br>
-            発表申し込み締め切り：<b>5月14日(水) 24時</b><br>
+            </a><br>
+            <b>ポスター発表申込及び、事前参加登録受付中!!</b> <br>
+            <b>口頭発表申し込みは終了いたしました。</b><br>
+            ポスター発表申込締め切り：<b>5月23日(金) 24時</b><br>
             事前参加登録締め切り：<b>7月8日(火)</b><br>
             <br>
             <a class="btn btn-success" href="https://form.run/@pasj2025-exhibition-form" role="button">
