プログラム追加

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -24,7 +24,15 @@
             <b>発表申し込みは終了いたしました。</b><br>
             事前参加登録締め切り：<b>7月8日(火)</b><br>
             <br>
-            <a class="btn btn-secondary" href="https://form.run/@conf-bunken-L85xLA1MozrhpOr11coD" role="button">
+            
+            <a class="btn btn-success" href="https://forms.gle/yRCiCj85kdH6BeWv5" role="button">
+                インフォーマルミーティング申込み
+                <img src="images/external_link.svg" alt="link icon">
+            </a>
+            <b>受付中!!</b><br>
+            申し込み締め切り : <b>7月18日(金)</b><br>
+
+            <a class="btn btn-secondary mt-3" href="https://form.run/@conf-bunken-L85xLA1MozrhpOr11coD" role="button">
                 学生・企業/研究機関懇談会申込み（学生のかた）
                 <img src="images/external_link.svg" alt="link icon">
             </a>
