--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -28,6 +28,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown-registration">
                         <li><a class="dropdown-item" href="join.html">参加要項</a></li>
                         <li><a class="dropdown-item" href="abstract.html">発表申込要領</a></li>
+                        <li><a class="dropdown-item" href="informal_meeting.html">インフォーマルミーティング</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -36,6 +37,7 @@
                         プログラム
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown-program">
+                        <li><a class="dropdown-item" href="program.html">タイムテーブル・プログラム一覧</a></li>
                         <li><a class="dropdown-item" href="special_lecture.html">特別講演(公開講座)</a></li>
                         <li><a class="dropdown-item" href="kikaku.html">企画セッション</a></li>
                     </ul>
@@ -49,6 +51,7 @@
                         <li><a class="dropdown-item" href="booth_info.html">ご出展案内</a></li>
                         <li><a class="dropdown-item" href="company.html">企業展示出展要領</a></li>
                         <li><a class="dropdown-item" href="company2.html">広告掲載募集要項</a></li>
+<!--                        <li><a class="dropdown-item" href="industrial.html">展示企業一覧</a></li>-->
                     </ul>
                 </li>
                 <li class="nav-item">
