--- a/layouts/program/single.html
+++ b/layouts/program/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
+<!--
 <h2>発表件数集計</h2>
 <table id="summary-table" class="table table-bordered table-striped">
   <thead>
@@ -10,12 +11,27 @@
   </thead>
   <tbody></tbody>
 </table>
+-->
+<iframe src="https://www.pasj.jp/dai22kainenkai/timetable.htm" frameborder="0" width="880px"></iframe>
 <p>
   <label for="categoryFilter">カテゴリで絞り込み：</label>
   <select id="categoryFilter">
     <option value="ALL">すべて表示</option>
   </select>
 </p>
+<p>
+  <label for="sessionFilter">セッションで絞り込み：</label>
+  <select id="sessionFilter">
+    <option value="ALL">すべて表示</option>
+  </select>
+</p>
+<p>
+  <label for="dateFilter">開催日で絞り込み：</label>
+  <select id="dateFilter">
+    <option value="ALL">すべて表示</option>
+  </select>
+</p>
+
 <table cellpadding="3" bgcolor="#ffffff" border="0" cellspacing="0" width="100%" id="program-table">
 </table>
 
