--- a/layouts/program/single.html
+++ b/layouts/program/single.html
@@ -12,8 +12,11 @@
   <tbody></tbody>
 </table>
 -->
-<iframe src="https://www.pasj.jp/dai22kainenkai/timetable.htm" frameborder="0" width="880px"></iframe>
-<p>
+
+<img src="images/timetable.svg" width="1100px">
+
+<br>
+<p class="mt-3">
   <label for="categoryFilter">カテゴリで絞り込み：</label>
   <select id="categoryFilter">
     <option value="ALL">すべて表示</option>
