--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -17,6 +17,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown-circular">
                         <li><a class="dropdown-item" href="first_circular.html">第１回サーキュラー</a></li>
                         <li><a class="dropdown-item" href="second_circular.html">第２回サーキュラー</a></li>
+<!--                        <li><a class="dropdown-item" href="third_circular.html">第３回サーキュラー</a></li>-->
                         <li><a class="dropdown-item" href="committee.html">委員一覧</a></li>
                     </ul>
                 </li>
@@ -37,7 +38,7 @@
                         プログラム
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown-program">
-                        <li><a class="dropdown-item" href="program.html">タイムテーブル・プログラム一覧</a></li>
+<!--                        <li><a class="dropdown-item" href="program.html">タイムテーブル・プログラム一覧</a></li>-->
                         <li><a class="dropdown-item" href="special_lecture.html">特別講演(公開講座)</a></li>
                         <li><a class="dropdown-item" href="kikaku.html">企画セッション</a></li>
                     </ul>
