--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -24,11 +24,13 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-registration" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        参加 &middot; 発表申込
+                        参加 &middot; 発表について
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown-registration">
                         <li><a class="dropdown-item" href="join.html">参加要項</a></li>
                         <li><a class="dropdown-item" href="abstract.html">発表申込要領</a></li>
+                        <li><a class="dropdown-item" href="presentation.html">発表要領</a></li>
+                        <li><a class="dropdown-item" href="proceedings.html">プロシーディングスの作成・提出要領</a></li>
                         <li><a class="dropdown-item" href="informal_meeting.html">インフォーマルミーティング</a></li>
                     </ul>
                 </li>
