--- a/layouts/program/single.html
+++ b/layouts/program/single.html
@@ -16,26 +16,30 @@
 <img src="images/timetable.svg" width="1100px">
 
 <br>
-<p class="mt-3">
-  <label for="categoryFilter">カテゴリで絞り込み：</label>
-  <select id="categoryFilter">
-    <option value="ALL">すべて表示</option>
-  </select>
-</p>
-<p>
-  <label for="sessionFilter">セッションで絞り込み：</label>
-  <select id="sessionFilter">
-    <option value="ALL">すべて表示</option>
-  </select>
-</p>
-<p>
-  <label for="dateFilter">開催日で絞り込み：</label>
-  <select id="dateFilter">
-    <option value="ALL">すべて表示</option>
-  </select>
-</p>
+<div class="container mt-4">
+  <div class="row mb-3">
+    <div class="col-md-4">
+      <label for="categoryFilter" class="form-label">カテゴリで絞り込み：</label>
+      <select class="form-select" id="categoryFilter">
+        <option value="ALL">すべて表示</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <label for="sessionFilter" class="form-label">セッションで絞り込み：</label>
+      <select class="form-select" id="sessionFilter">
+        <option value="ALL">すべて表示</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <label for="dateFilter" class="form-label">開催日で絞り込み：</label>
+      <select class="form-select" id="dateFilter">
+        <option value="ALL">すべて表示</option>
+      </select>
+    </div>
+  </div>
+</div>
 
-<table cellpadding="3" bgcolor="#ffffff" border="0" cellspacing="0" width="100%" id="program-table">
+<table class="program-table" id="program-table">
 </table>
 
 <script src="js/abstract.js"></script>
