トップページの改修 プロシーディングス投稿受付の旨を追加

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -20,12 +20,11 @@
                 PASJ2025 参加・発表申込システム
                 <img src="images/external_link.svg" alt="link icon">
             </a><br>
-            <b>事前参加登録受付中!!</b> <br>
-            <b>発表申し込みは終了いたしました。</b><br>
-            事前参加登録締め切り：<b>7月8日(火)</b><br>
-            <br>
-            
-            <a class="btn btn-success" href="https://forms.gle/yRCiCj85kdH6BeWv5" role="button">
+            <b>プロシーディングス投稿 受付中</b><br>
+            提出期限：<b>8月11日(月)</b> (年会賞応募者は<b>8月5日(火)</b>)<br>
+            事前参加登録・発表申し込み受付は終了いたしました。
+            <br>            
+            <a class="btn btn-success mt-3" href="https://forms.gle/yRCiCj85kdH6BeWv5" role="button">
                 インフォーマルミーティング申込み
                 <img src="images/external_link.svg" alt="link icon">
             </a>
