Revert "インフォーマルミーティングへの受付リンクを削除"
This reverts commit 7901fd8bcf05f5850a354dcf253529790378b5c0.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -24,6 +24,13 @@
             提出期限：<b>8月11日(月)</b> (年会賞応募者は<b>8月5日(火)</b>)<br>
             事前参加登録・発表申し込み受付は終了いたしました。
             <br>            
+            <a class="btn btn-success mt-3" href="https://forms.gle/yRCiCj85kdH6BeWv5" role="button">
+                インフォーマルミーティング申込み
+                <img src="images/external_link.svg" alt="link icon">
+            </a>
+            <b>受付中!!</b><br>
+            申し込み締め切り : <b>7月18日(金)</b><br>
+
             <a class="btn btn-secondary mt-3" href="https://form.run/@conf-bunken-L85xLA1MozrhpOr11coD" role="button">
                 学生・企業/研究機関懇談会申込み（学生のかた）
                 <img src="images/external_link.svg" alt="link icon">
