Add Industrial List

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -54,7 +54,7 @@
                         <li><a class="dropdown-item" href="booth_info.html">ご出展案内</a></li>
                         <li><a class="dropdown-item" href="company.html">企業展示出展要領</a></li>
                         <li><a class="dropdown-item" href="company2.html">広告掲載募集要項</a></li>
-<!--                        <li><a class="dropdown-item" href="industrial.html">展示企業一覧</a></li>-->
+                        <li><a class="dropdown-item" href="industrial.html">展示企業一覧</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
