当日参加登録オープン

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -21,6 +21,7 @@
                 <img src="images/external_link.svg" alt="link icon">
             </a><br>
             <b>プロシーディングス投稿 受付中</b><br>
+            <b>参加登録受付中 !!</b><br>
             提出期限：<b>8月11日(月)</b> (年会賞応募者は<b>8月5日(火)</b>)<br>
             事前参加登録・発表申し込み受付は終了いたしました。
             <br>            
