Update Top 年会終了のため、各種リンクなどを削除

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -16,23 +16,16 @@
 
 
         <div class="col-md-6 mt-5 mb-5">
-            <a class="btn btn-primary" href="https://iap-jp.org/pasj/conf/" role="button">
+            <b>お蔭様で盛況な年会として無事終了することができました。ありがとうございました。</b><br>
+            <b>来年度の第23回年会＠仙台でもお会いできるのを楽しみにしております。</b>
+            <a class="btn btn-primary mt-5" href="https://iap-jp.org/pasj/conf/" role="button">
                 PASJ2025 参加・発表申込システム
                 <img src="images/external_link.svg" alt="link icon">
             </a><br>
             <b>プロシーディングス投稿 受付中</b><br>
-            <b>参加登録受付中 !!</b><br>
-            提出期限：<b>8月11日(月)</b> (年会賞応募者は<b>8月5日(火)</b>)<br>
-            事前参加登録・発表申し込み受付は終了いたしました。
-            <br>            
-            <a class="btn btn-success mt-3" href="https://forms.gle/yRCiCj85kdH6BeWv5" role="button">
-                インフォーマルミーティング申込み
-                <img src="images/external_link.svg" alt="link icon">
-            </a>
-            <b>受付中!!</b><br>
         </div>
-
     </div>
+
     <div class="row">
         <div class="col-md-4 mb-3">
             <img src="images/pasj2025_poster.jpg" alt="Poster" class="img-fluid"><br>
@@ -48,4 +41,5 @@
         </div>
     </div>
 </div>
+
 {{ end }}
