--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,7 +22,7 @@
                 PASJ2025 参加・発表申込システム
                 <img src="images/external_link.svg" alt="link icon">
             </a><br>
-            <b>プロシーディングス投稿 受付中</b><br>
+            <b>プロシーディングス投稿 受付中(8/31まで)</b><br>
         </div>
     </div>
 
